--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,6 @@
               "sourceMap": false,
               "extractCss": false,
               "namedChunks": true,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": true,
               "buildOptimizer": true,
@@ -72,6 +71,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ],
               "scripts": [
@@ -119,5 +122,8 @@
       }
     }
   },
-  "defaultProject": "portfolio.ouq77.kiwi"
+  "defaultProject": "portfolio.ouq77.kiwi",
+  "cli": {
+    "analytics": false
+  }
 }
