--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,4 @@
 {
-  "angularCompilerOptions": {
-    "enableIvy": true
-  },
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
@@ -10,10 +7,11 @@
       "googlemaps"
     ]
   },
-  "include": [
-    "src/**/*.ts"
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
   ],
-  "exclude": [
-    "src/environments/*.ts"
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
