--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "9.0.3",
+  "version": "9.0.4",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -42,31 +42,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.0-rc.6",
-    "@angular/common": "9.0.0-rc.6",
-    "@angular/compiler": "9.0.0-rc.6",
-    "@angular/core": "9.0.0-rc.6",
-    "@angular/forms": "9.0.0-rc.6",
-    "@angular/platform-browser": "9.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "9.0.0-rc.6",
-    "@angular/router": "9.0.0-rc.6",
-    "rxjs": "6.5.3",
+    "@angular/animations": "9.0.0-rc.7",
+    "@angular/common": "9.0.0-rc.7",
+    "@angular/compiler": "9.0.0-rc.7",
+    "@angular/core": "9.0.0-rc.7",
+    "@angular/forms": "9.0.0-rc.7",
+    "@angular/platform-browser": "9.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "9.0.0-rc.7",
+    "@angular/router": "9.0.0-rc.7",
+    "rxjs": "6.5.4",
     "tslib": "1.10.0",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.900.0-rc.4",
-    "@angular/cli": "9.0.0-rc.6",
-    "@angular/compiler-cli": "9.0.0-rc.6",
-    "@angular/language-service": "9.0.0-rc.6",
+    "@angular-devkit/build-angular": "0.900.0-rc.7",
+    "@angular/cli": "9.0.0-rc.7",
+    "@angular/compiler-cli": "9.0.0-rc.7",
+    "@angular/language-service": "9.0.0-rc.7",
     "@ngui/common": "0.6.0",
-    "@types/googlemaps": "3.38.1",
+    "@types/googlemaps": "3.39.0",
     "@types/jquery": "3.3.31",
-    "@types/node": "12.12.17",
+    "@types/node": "13.1.2",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
-    "codelyzer": "5.2.0",
+    "codelyzer": "5.2.1",
     "command-line-args": "5.1.1",
     "convict": "5.2.0",
     "dateformat": "3.0.3",
@@ -84,11 +84,9 @@
     "ts-node": "8.5.4",
     "tslint": "5.20.1",
     "typescript": "3.6.4",
-    "uglify-js": "3.7.2"
+    "uglify-js": "3.7.3"
   },
   "resolutions": {
-    "https-proxy-agent": "3.0.1",
-    "lodash": "4.17.15",
-    "serialize-javascript": "2.1.2"
+    "lodash": "4.17.15"
   }
 }
