--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "9.0.13",
+  "version": "9.0.14",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -51,6 +51,7 @@
     "@angular/platform-browser": "9.0.0",
     "@angular/platform-browser-dynamic": "9.0.0",
     "@angular/router": "9.0.0",
+    "ng-lazyload-image": "7.0.1",
     "rxjs": "6.5.4",
     "tslib": "1.10.0",
     "zone.js": "0.10.2"
