--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "9.0.21",
+  "version": "9.0.22",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -42,15 +42,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.4",
-    "@angular/common": "9.0.4",
-    "@angular/compiler": "9.0.4",
-    "@angular/core": "9.0.4",
-    "@angular/forms": "9.0.4",
-    "@angular/language-service": "9.0.4",
-    "@angular/platform-browser": "9.0.4",
-    "@angular/platform-browser-dynamic": "9.0.4",
-    "@angular/router": "9.0.4",
+    "@angular/animations": "9.0.5",
+    "@angular/common": "9.0.5",
+    "@angular/compiler": "9.0.5",
+    "@angular/core": "9.0.5",
+    "@angular/forms": "9.0.5",
+    "@angular/language-service": "9.0.5",
+    "@angular/platform-browser": "9.0.5",
+    "@angular/platform-browser-dynamic": "9.0.5",
+    "@angular/router": "9.0.5",
     "ng-lazyload-image": "7.1.0",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
@@ -58,13 +58,13 @@
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.900.4",
-    "@angular/cli": "9.0.4",
-    "@angular/compiler-cli": "9.0.4",
+    "@angular-devkit/build-angular": "0.900.5",
+    "@angular/cli": "9.0.5",
+    "@angular/compiler-cli": "9.0.5",
     "@ngui/common": "0.6.0",
     "@types/googlemaps": "3.39.3",
     "@types/jquery": "3.3.33",
-    "@types/node": "13.7.7",
+    "@types/node": "13.9.0",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "5.2.1",
@@ -75,7 +75,7 @@
     "html-minifier": "4.0.0",
     "intersection-observer": "0.7.0",
     "jquery": "3.4.1",
-    "jsonfile": "6.0.0",
+    "jsonfile": "6.0.1",
     "lodash": "4.17.15",
     "ncp": "2.0.0",
     "node-sass": "4.13.1",
@@ -88,6 +88,7 @@
     "uglify-js": "3.8.0"
   },
   "resolutions": {
+    "acorn": "7.1.1",
     "lodash": "4.17.15"
   }
 }
