--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "9.0.23",
+  "version": "9.0.24",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -42,32 +42,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.6",
-    "@angular/common": "9.0.6",
-    "@angular/compiler": "9.0.6",
-    "@angular/core": "9.0.6",
-    "@angular/forms": "9.0.6",
-    "@angular/language-service": "9.0.6",
-    "@angular/platform-browser": "9.0.6",
-    "@angular/platform-browser-dynamic": "9.0.6",
-    "@angular/router": "9.0.6",
+    "@angular/animations": "9.1.0",
+    "@angular/common": "9.1.0",
+    "@angular/compiler": "9.1.0",
+    "@angular/core": "9.1.0",
+    "@angular/forms": "9.1.0",
+    "@angular/language-service": "9.1.0",
+    "@angular/platform-browser": "9.1.0",
+    "@angular/platform-browser-dynamic": "9.1.0",
+    "@angular/router": "9.1.0",
     "ng-lazyload-image": "7.1.0",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
-    "zone.js": "0.10.2"
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.900.5",
-    "@angular/cli": "9.0.5",
-    "@angular/compiler-cli": "9.0.6",
+    "@angular-devkit/build-angular": "0.901.0",
+    "@angular/cli": "9.1.0",
+    "@angular/compiler-cli": "9.1.0",
     "@ngui/common": "0.6.0",
     "@types/googlemaps": "3.39.3",
-    "@types/jquery": "3.3.33",
-    "@types/node": "13.9.0",
+    "@types/jquery": "3.3.34",
+    "@types/node": "13.9.8",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
-    "codelyzer": "5.2.1",
+    "codelyzer": "5.2.2",
     "command-line-args": "5.1.1",
     "convict": "5.2.0",
     "dateformat": "3.0.3",
@@ -82,13 +82,13 @@
     "npm-run-all": "4.1.5",
     "npmversion": "1.7.0",
     "rimraf": "3.0.2",
-    "ts-node": "8.6.2",
-    "tslint": "6.0.0",
-    "typescript": "3.7.5",
-    "uglify-js": "3.8.0"
+    "ts-node": "8.8.1",
+    "tslint": "6.1.0",
+    "typescript": "3.8.3",
+    "uglify-js": "3.8.1"
   },
   "resolutions": {
-    "acorn": "7.1.1",
-    "lodash": "4.17.15"
+    "lodash": "4.17.15",
+    "minimist": "1.2.5"
   }
 }
