--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "9.0.25",
+  "version": "9.0.26",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -8,9 +8,10 @@
     "url": "https://github.com/ouq77/portfolio-web"
   },
   "engines": {
-    "node": "13",
+    "node": "14",
     "npm": "6"
   },
+  "preinstall": "npx npm-force-resolutions",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.js --disable-host-check",
@@ -42,15 +43,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.1",
-    "@angular/common": "9.1.1",
-    "@angular/compiler": "9.1.1",
-    "@angular/core": "9.1.1",
-    "@angular/forms": "9.1.1",
-    "@angular/language-service": "9.1.1",
-    "@angular/platform-browser": "9.1.1",
-    "@angular/platform-browser-dynamic": "9.1.1",
-    "@angular/router": "9.1.1",
+    "@angular/animations": "9.1.3",
+    "@angular/common": "9.1.3",
+    "@angular/compiler": "9.1.3",
+    "@angular/core": "9.1.3",
+    "@angular/forms": "9.1.3",
+    "@angular/language-service": "9.1.3",
+    "@angular/platform-browser": "9.1.3",
+    "@angular/platform-browser-dynamic": "9.1.3",
+    "@angular/router": "9.1.3",
     "ng-lazyload-image": "7.1.0",
     "rxjs": "6.5.5",
     "tslib": "1.11.1",
@@ -58,13 +59,13 @@
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.901.1",
-    "@angular/cli": "9.1.1",
-    "@angular/compiler-cli": "9.1.1",
+    "@angular-devkit/build-angular": "0.901.3",
+    "@angular/cli": "9.1.3",
+    "@angular/compiler-cli": "9.1.3",
     "@ngui/common": "0.6.0",
     "@types/googlemaps": "3.39.3",
-    "@types/jquery": "3.3.34",
-    "@types/node": "13.11.1",
+    "@types/jquery": "3.3.36",
+    "@types/node": "13.13.4",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "5.2.2",
@@ -73,19 +74,19 @@
     "dateformat": "3.0.3",
     "glob": "7.1.6",
     "html-minifier": "4.0.0",
-    "intersection-observer": "0.8.0",
+    "intersection-observer": "0.10.0",
     "jquery": "3.5.0",
     "jsonfile": "6.0.1",
     "lodash": "4.17.15",
     "ncp": "2.0.0",
-    "node-sass": "4.13.1",
+    "node-sass": "4.14.0",
     "npm-run-all": "4.1.5",
     "npmversion": "1.7.0",
     "rimraf": "3.0.2",
-    "ts-node": "8.8.2",
-    "tslint": "6.1.1",
+    "ts-node": "8.9.1",
+    "tslint": "6.1.2",
     "typescript": "3.8.3",
-    "uglify-js": "3.9.0"
+    "uglify-js": "3.9.1"
   },
   "resolutions": {
     "lodash": "4.17.15",
