--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "$schema": "node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -43,8 +43,7 @@
               "node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js",
               "src/assets/js/modernizr.custom.js",
               "src/assets/js/jquery.gridrotator.js",
-              "src/assets/js/stick.up.js",
-              "src/assets/js/jquery.easypiechart.js"
+              "src/assets/js/stick.up.js"
             ]
           },
           "configurations": {
@@ -83,7 +82,6 @@
                 "src/assets/js/modernizr.custom.js",
                 "src/assets/js/jquery.gridrotator.js",
                 "src/assets/js/stick.up.js",
-                "src/assets/js/jquery.easypiechart.js",
                 "src/assets/js/pre-render.js",
                 "src/assets/js/google-analytics.js",
                 "src/assets/js/service-worker.js"
