--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "application",
       "schematics": {},
       "root": "",
-      "sourceRoot": "src",
+      "sourceRoot": "build",
       "prefix": "app",
       "architect": {
         "build": {
@@ -16,45 +16,45 @@
             "aot": true,
             "outputPath": "dist",
             "resourcesOutputPath": "assets/resources",
-            "index": "src/index.dev.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "index": "build/index.dev.html",
+            "main": "build/main.ts",
+            "polyfills": "build/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets/images",
-              "src/assets/markers",
-              "src/assets/webp",
-              "src/404.html",
-              "src/c022e2f3e4f02807e67dc84432828f3f7b532a66.html",
-              "src/exclude.html",
-              "src/google536c542405d09504.html",
-              "src/manifest.json",
-              "src/offline.html",
-              "src/robots.txt",
-              "src/sitemap.xml",
-              "src/sw.js"
+              "build/favicon.ico",
+              "build/assets/images",
+              "build/assets/markers",
+              "build/assets/webp",
+              "build/404.html",
+              "build/c022e2f3e4f02807e67dc84432828f3f7b532a66.html",
+              "build/exclude.html",
+              "build/google536c542405d09504.html",
+              "build/manifest.json",
+              "build/offline.html",
+              "build/robots.txt",
+              "build/sitemap.xml",
+              "build/sw.js"
             ],
             "styles": [
-              "src/assets/css/layout.scss"
+              "build/assets/css/layout.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js",
-              "src/assets/js/modernizr.custom.js",
-              "src/assets/js/jquery.gridrotator.js",
-              "src/assets/js/stick.up.js"
+              "build/assets/js/modernizr.custom.js",
+              "build/assets/js/jquery.gridrotator.js",
+              "build/assets/js/stick.up.js"
             ]
           },
           "configurations": {
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "build/environments/environment.ts",
+                  "with": "build/environments/environment.prod.ts"
                 }
               ],
-              "index": "src/index.html",
+              "index": "build/index.html",
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -79,12 +79,12 @@
               "scripts": [
                 "node_modules/jquery/dist/jquery.min.js",
                 "node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js",
-                "src/assets/js/modernizr.custom.js",
-                "src/assets/js/jquery.gridrotator.js",
-                "src/assets/js/stick.up.js",
-                "src/assets/js/pre-render.js",
-                "src/assets/js/google-analytics.js",
-                "src/assets/js/service-worker.js"
+                "build/assets/js/modernizr.custom.js",
+                "build/assets/js/jquery.gridrotator.js",
+                "build/assets/js/stick.up.js",
+                "build/assets/js/pre-render.js",
+                "build/assets/js/google-analytics.js",
+                "build/assets/js/service-worker.js"
               ]
             }
           }
