--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.js --disable-host-check",
     "build": "npm-run-all build:*",
-    "build:lint": "ng lint",
     "build:config-2-json": "node config/config.2.json.js",
-    "build:compile": "ng build --prod",
-    "build:render": "node tools/template-compile -s 'index.html|exclude.html|sitemap.xml|sw.js|scripts.*.js|main-*.js' -c config/config.json",
+    "build:prep": "npm-run-all build:prep:*",
+    "build:prep:clean": "rimraf build",
+    "build:prep:copy": "ncp src build",
+    "build:lint": "ng lint",
+    "build:render": "npm-run-all build:render:*",
+    "build:render:scripts": "node tools/template-compile -d build/assets/js -s 'service-worker.js|google-analytics.js' -c config/config.json",
+    "build:render:files": "node tools/template-compile -d build -s 'index.html|exclude.html|sitemap.xml|sw.js|environments/environment.prod.ts' -c config/config.json",
+    "build:render:components": "node tools/template-compile -d build/app/components/footer/components -s 'footer.html' -c config/config.json",
+    "build:compile": "ng build --prod --subresource-integrity",
     "build:html-min-templates": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir dist --output-dir dist --file-ext html",
     "build:uglify-js": "uglifyjs dist/sw.js --compress --output dist/sw.js",
     "bump:major": "npm-run-all bump:major:*",
@@ -43,15 +49,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.9",
-    "@angular/common": "9.1.9",
-    "@angular/compiler": "9.1.9",
-    "@angular/core": "9.1.9",
-    "@angular/forms": "9.1.9",
-    "@angular/language-service": "9.1.9",
-    "@angular/platform-browser": "9.1.9",
-    "@angular/platform-browser-dynamic": "9.1.9",
-    "@angular/router": "9.1.9",
+    "@angular/animations": "9.1.10",
+    "@angular/common": "9.1.10",
+    "@angular/compiler": "9.1.10",
+    "@angular/core": "9.1.10",
+    "@angular/forms": "9.1.10",
+    "@angular/language-service": "9.1.10",
+    "@angular/platform-browser": "9.1.10",
+    "@angular/platform-browser-dynamic": "9.1.10",
+    "@angular/router": "9.1.10",
     "ng-lazyload-image": "8.0.1",
     "rxjs": "6.5.5",
     "tslib": "2.0.0",
@@ -61,11 +67,11 @@
     "@agm/core": "1.1.0",
     "@angular-devkit/build-angular": "0.901.7",
     "@angular/cli": "9.1.7",
-    "@angular/compiler-cli": "9.1.9",
+    "@angular/compiler-cli": "9.1.10",
     "@ngui/common": "0.6.0",
     "@types/googlemaps": "3.39.6",
     "@types/jquery": "3.3.38",
-    "@types/node": "14.0.11",
+    "@types/node": "14.0.13",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "5.2.2",
