Goodbye Google Analytics.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "build:prep:copy": "ncp src build",
     "build:lint": "ng lint",
     "build:render": "npm-run-all build:render:*",
-    "build:render:scripts": "node tools/template-compile -d build/assets/js -s 'service-worker.js|google-analytics.js' -c config/config.json",
-    "build:render:files": "node tools/template-compile -d build -s 'index.html|exclude.html|sitemap.xml|sw.js|environments/environment.prod.ts' -c config/config.json",
     "build:render:components": "node tools/template-compile -d build/app/components/footer/components -s 'footer.html' -c config/config.json",
+    "build:render:files": "node tools/template-compile -s 'index.html|sitemap.xml|sw.js|environments/environment.prod.ts' -c config/config.json",
+    "build:render:scripts": "node tools/template-compile -d build/assets/js -s 'service-worker.js' -c config/config.json",
     "build:compile": "ng build --prod --subresource-integrity",
     "build:html-min-templates": "html-minifier --case-sensitive --collapse-whitespace --remove-comments --minify-css --minify-js --input-dir dist --output-dir dist --file-ext html",
     "build:uglify-js": "uglifyjs dist/sw.js --compress --output dist/sw.js",
@@ -49,15 +49,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.10",
-    "@angular/common": "9.1.10",
-    "@angular/compiler": "9.1.10",
-    "@angular/core": "9.1.10",
-    "@angular/forms": "9.1.10",
-    "@angular/language-service": "9.1.10",
-    "@angular/platform-browser": "9.1.10",
-    "@angular/platform-browser-dynamic": "9.1.10",
-    "@angular/router": "9.1.10",
+    "@angular/animations": "9.1.11",
+    "@angular/common": "9.1.11",
+    "@angular/compiler": "9.1.11",
+    "@angular/core": "9.1.11",
+    "@angular/forms": "9.1.11",
+    "@angular/language-service": "9.1.11",
+    "@angular/platform-browser": "9.1.11",
+    "@angular/platform-browser-dynamic": "9.1.11",
+    "@angular/router": "9.1.11",
     "ng-lazyload-image": "8.0.1",
     "rxjs": "6.5.5",
     "tslib": "2.0.0",
@@ -65,9 +65,9 @@
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.901.7",
-    "@angular/cli": "9.1.7",
-    "@angular/compiler-cli": "9.1.10",
+    "@angular-devkit/build-angular": "0.901.8",
+    "@angular/cli": "9.1.8",
+    "@angular/compiler-cli": "9.1.11",
     "@ngui/common": "0.6.0",
     "@types/googlemaps": "3.39.6",
     "@types/jquery": "3.3.38",
