--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ouq77-portfolio",
   "author": "ouq77",
-  "version": "9.1.3",
+  "version": "9.1.4",
   "description": "On-line portfolio of Louw Swart",
   "main": "server/server.js",
   "repository": {
@@ -32,6 +32,7 @@
     "helmet-csp": "2.10.0",
     "hpkp": "2.0.0",
     "hsts": "2.2.0",
+    "htmlparser2": "4.1.0",
     "node-fetch": "2.6.0",
     "nodemailer": "6.4.8",
     "ord": "1.0.1",
