--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "10.0.1",
+  "version": "10.0.2",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -50,15 +50,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.0.2",
-    "@angular/common": "10.0.2",
-    "@angular/compiler": "10.0.2",
-    "@angular/core": "10.0.2",
-    "@angular/forms": "10.0.2",
-    "@angular/language-service": "10.0.2",
-    "@angular/platform-browser": "10.0.2",
-    "@angular/platform-browser-dynamic": "10.0.2",
-    "@angular/router": "10.0.2",
+    "@angular/animations": "10.0.3",
+    "@angular/common": "10.0.3",
+    "@angular/compiler": "10.0.3",
+    "@angular/core": "10.0.3",
+    "@angular/forms": "10.0.3",
+    "@angular/language-service": "10.0.3",
+    "@angular/platform-browser": "10.0.3",
+    "@angular/platform-browser-dynamic": "10.0.3",
+    "@angular/router": "10.0.3",
     "ng-lazyload-image": "8.0.1",
     "rxjs": "6.6.0",
     "tslib": "2.0.0",
@@ -68,14 +68,14 @@
     "@agm/core": "1.1.0",
     "@angular-devkit/build-angular": "0.1000.1",
     "@angular/cli": "10.0.1",
-    "@angular/compiler-cli": "10.0.2",
+    "@angular/compiler-cli": "10.0.3",
     "@ngui/common": "0.6.0",
     "@types/googlemaps": "3.39.8",
     "@types/jquery": "3.5.0",
-    "@types/node": "14.0.14",
+    "@types/node": "14.0.20",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
-    "codelyzer": "5.2.2",
+    "codelyzer": "6.0.0",
     "command-line-args": "5.1.1",
     "convict": "6.0.0",
     "dateformat": "3.0.3",
@@ -84,7 +84,7 @@
     "intersection-observer": "0.11.0",
     "jquery": "3.5.1",
     "jsonfile": "6.0.1",
-    "lodash": "4.17.15",
+    "lodash": "4.17.19",
     "ncp": "2.0.0",
     "node-sass": "4.14.1",
     "npm-run-all": "4.1.5",
@@ -96,8 +96,8 @@
     "uglify-js": "3.10.0"
   },
   "resolutions": {
-    "lodash": "4.17.15",
+    "lodash": "4.17.19",
     "minimist": "1.2.5",
-    "yargs-parser": "^18.1.3"
+    "yargs-parser": "18.1.3"
   }
 }
