--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ouq77-portfolio",
   "author": "ouq77",
-  "version": "10.0.1",
+  "version": "10.0.2",
   "description": "On-line portfolio of Louw Swart",
   "main": "server/server.js",
   "repository": {
@@ -23,11 +23,12 @@
     "compression": "1.7.4",
     "convict": "6.0.0",
     "convict-format-with-validator": "6.0.0",
+    "cors": "2.8.5",
     "debug": "4.1.1",
     "express": "4.17.1",
     "express-cache-headers": "0.1.4",
     "express-user-agent-blocker": "2.0.3",
-    "forever-monitor": "3.0.0",
+    "forever-monitor": "3.0.1",
     "helmet": "3.23.3",
     "helmet-csp": "2.10.0",
     "hpkp": "2.0.0",
@@ -48,6 +49,7 @@
     "start": "standard && node server/start.js"
   },
   "resolutions": {
+    "lodash": "4.17.19",
     "minimist": "1.2.5",
     "yargs-parser": "^18.1.3"
   }
