--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,8 @@
                 }
               ],
               "index": "build/index.html",
+              "commonChunk": true,
+              "subresourceIntegrity": true,
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
