--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "express-cache-headers": "0.1.4",
     "express-user-agent-blocker": "2.0.3",
     "forever-monitor": "3.0.1",
-    "helmet": "3.23.3",
-    "helmet-csp": "2.10.0",
+    "helmet": "4.0.0",
+    "helmet-csp": "3.0.0",
     "hpkp": "2.0.0",
     "hsts": "2.2.0",
     "htmlparser2": "4.1.0",
@@ -38,6 +38,7 @@
     "ord": "1.0.1",
     "referrer-policy": "1.2.0",
     "require-directory": "2.1.1",
+    "useragent": "2.3.0",
     "webp-middleware": "0.4.0"
   },
   "devDependencies": {
