--- a/package.json
+++ b/package.json
@@ -67,18 +67,29 @@
   "devDependencies": {
     "@agm/core": "1.1.0",
     "@angular-devkit/build-angular": "0.1100.3",
+    "@angular-eslint/builder": "0.8.0-beta.3",
+    "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
+    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
+    "@angular-eslint/schematics": "0.8.0-beta.3",
+    "@angular-eslint/template-parser": "0.8.0-beta.3",
     "@angular/cli": "11.0.3",
     "@angular/compiler-cli": "11.0.3",
     "@ngui/common": "0.7.0",
     "@types/googlemaps": "3.40.3",
     "@types/jquery": "3.5.4",
     "@types/node": "14.14.10",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "6.0.1",
     "command-line-args": "5.1.1",
     "convict": "6.0.0",
     "dateformat": "4.2.2",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
     "glob": "7.1.6",
     "html-minifier": "4.0.0",
     "intersection-observer": "0.11.0",
@@ -86,10 +97,10 @@
     "jsonfile": "6.1.0",
     "lodash": "4.17.20",
     "ncp": "2.0.0",
-    "node-sass": "5.0.0",
     "npm-run-all": "4.1.5",
     "npmversion": "1.7.0",
     "rimraf": "3.0.2",
+    "sass": "1.30.0",
     "ts-node": "9.1.0",
     "tslint": "6.1.3",
     "typescript": "4.0.5",
