--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "10.1.6",
+  "version": "10.1.7",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -50,15 +50,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.3",
-    "@angular/common": "11.0.3",
-    "@angular/compiler": "11.0.3",
-    "@angular/core": "11.0.3",
-    "@angular/forms": "11.0.3",
-    "@angular/language-service": "11.0.3",
-    "@angular/platform-browser": "11.0.3",
-    "@angular/platform-browser-dynamic": "11.0.3",
-    "@angular/router": "11.0.3",
+    "@angular/animations": "11.0.4",
+    "@angular/common": "11.0.4",
+    "@angular/compiler": "11.0.4",
+    "@angular/core": "11.0.4",
+    "@angular/forms": "11.0.4",
+    "@angular/language-service": "11.0.4",
+    "@angular/platform-browser": "11.0.4",
+    "@angular/platform-browser-dynamic": "11.0.4",
+    "@angular/router": "11.0.4",
     "ng-lazyload-image": "9.1.0",
     "rxjs": "6.6.3",
     "tslib": "2.0.3",
@@ -66,33 +66,33 @@
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.1100.3",
-    "@angular-eslint/builder": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
-    "@angular-eslint/schematics": "0.8.0-beta.3",
-    "@angular-eslint/template-parser": "0.8.0-beta.3",
-    "@angular/cli": "11.0.3",
-    "@angular/compiler-cli": "11.0.3",
+    "@angular-devkit/build-angular": "0.1100.4",
+    "@angular-eslint/builder": "0.8.0-beta.5",
+    "@angular-eslint/eslint-plugin": "0.8.0-beta.5",
+    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.5",
+    "@angular-eslint/schematics": "0.8.0-beta.5",
+    "@angular-eslint/template-parser": "0.8.0-beta.5",
+    "@angular/cli": "11.0.4",
+    "@angular/compiler-cli": "11.0.4",
     "@ngui/common": "0.7.0",
-    "@types/googlemaps": "3.40.3",
-    "@types/jquery": "3.5.4",
-    "@types/node": "14.14.10",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@types/googlemaps": "3.40.5",
+    "@types/jquery": "3.5.5",
+    "@types/node": "14.14.13",
+    "@typescript-eslint/eslint-plugin": "4.9.1",
+    "@typescript-eslint/parser": "4.9.1",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "6.0.1",
     "command-line-args": "5.1.1",
     "convict": "6.0.0",
-    "dateformat": "4.2.2",
-    "eslint": "^7.6.0",
+    "dateformat": "4.3.1",
+    "eslint": "^7.15.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-jsdoc": "30.7.8",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "glob": "7.1.6",
     "html-minifier": "4.0.0",
-    "intersection-observer": "0.11.0",
+    "intersection-observer": "0.12.0",
     "jquery": "3.5.1",
     "jsonfile": "6.1.0",
     "lodash": "4.17.20",
@@ -101,14 +101,14 @@
     "npmversion": "1.7.0",
     "rimraf": "3.0.2",
     "sass": "1.30.0",
-    "ts-node": "9.1.0",
+    "ts-node": "9.1.1",
     "tslint": "6.1.3",
     "typescript": "4.0.5",
     "uglify-js": "3.12.1"
   },
   "resolutions": {
+    "ini": "2.0.0",
     "lodash": "4.17.20",
-    "minimist": "1.2.5",
-    "yargs-parser": "18.1.3"
+    "minimist": "1.2.5"
   }
 }
