--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "10.1.9",
+  "version": "10.1.10",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": "15",
-    "npm": "6"
+    "npm": "7"
   },
   "scripts": {
     "ng": "ng",
@@ -45,20 +45,19 @@
     "heroku:clean:resources": "rimraf heroku/app/assets/resources",
     "heroku:clean:files": "rimraf heroku/app/*.html heroku/app/*.js heroku/app/*.css heroku/app/*.ico heroku/app/*.json heroku/app/*.txt heroku/app/*.xml",
     "ncu:update": "ncu -u && npm update && npm update -D && npm install",
-    "preinstall": "npx npm-force-resolutions",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && npm prune"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.4",
-    "@angular/common": "11.0.4",
-    "@angular/compiler": "11.0.4",
-    "@angular/core": "11.0.4",
-    "@angular/forms": "11.0.4",
-    "@angular/language-service": "11.0.4",
-    "@angular/platform-browser": "11.0.4",
-    "@angular/platform-browser-dynamic": "11.0.4",
-    "@angular/router": "11.0.4",
+    "@angular/animations": "11.0.5",
+    "@angular/common": "11.0.5",
+    "@angular/compiler": "11.0.5",
+    "@angular/core": "11.0.5",
+    "@angular/forms": "11.0.5",
+    "@angular/language-service": "11.0.5",
+    "@angular/platform-browser": "11.0.5",
+    "@angular/platform-browser-dynamic": "11.0.5",
+    "@angular/router": "11.0.5",
     "ng-lazyload-image": "9.1.0",
     "rxjs": "6.6.3",
     "tslib": "2.0.3",
@@ -66,29 +65,29 @@
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.1100.4",
-    "@angular-eslint/builder": "0.8.0-beta.5",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.5",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.5",
-    "@angular-eslint/schematics": "0.8.0-beta.5",
-    "@angular-eslint/template-parser": "0.8.0-beta.5",
-    "@angular/cli": "11.0.4",
-    "@angular/compiler-cli": "11.0.4",
+    "@angular-devkit/build-angular": "0.1100.5",
+    "@angular-eslint/builder": "0.8.0-beta.7",
+    "@angular-eslint/eslint-plugin": "0.8.0-beta.7",
+    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.7",
+    "@angular-eslint/schematics": "0.8.0-beta.7",
+    "@angular-eslint/template-parser": "0.8.0-beta.7",
+    "@angular/cli": "11.0.5",
+    "@angular/compiler-cli": "11.0.5",
     "@ngui/common": "0.7.0",
-    "@types/googlemaps": "3.40.5",
+    "@types/googlemaps": "3.43.0",
     "@types/jquery": "3.5.5",
-    "@types/node": "14.14.13",
-    "@typescript-eslint/eslint-plugin": "4.9.1",
-    "@typescript-eslint/parser": "4.9.1",
+    "@types/node": "14.14.14",
+    "@typescript-eslint/eslint-plugin": "4.11.0",
+    "@typescript-eslint/parser": "4.11.0",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "6.0.1",
     "command-line-args": "5.1.1",
     "convict": "6.0.0",
-    "dateformat": "4.3.1",
-    "eslint": "^7.15.0",
+    "dateformat": "4.4.1",
+    "eslint": "7.16.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.8",
+    "eslint-plugin-jsdoc": "30.7.9",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "glob": "7.1.6",
     "html-minifier": "4.0.0",
@@ -98,17 +97,12 @@
     "lodash": "4.17.20",
     "ncp": "2.0.0",
     "npm-run-all": "4.1.5",
-    "npmversion": "1.7.0",
+    "npmversion": "1.0.1",
     "rimraf": "3.0.2",
     "sass": "1.30.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
     "typescript": "4.0.5",
-    "uglify-js": "3.12.1"
-  },
-  "resolutions": {
-    "ini": "2.0.0",
-    "lodash": "4.17.20",
-    "minimist": "1.2.5"
+    "uglify-js": "3.12.3"
   }
 }
