--- a/package.json
+++ b/package.json
@@ -49,45 +49,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.5",
-    "@angular/common": "11.0.5",
-    "@angular/compiler": "11.0.5",
-    "@angular/core": "11.0.5",
-    "@angular/forms": "11.0.5",
-    "@angular/language-service": "11.0.5",
-    "@angular/platform-browser": "11.0.5",
-    "@angular/platform-browser-dynamic": "11.0.5",
-    "@angular/router": "11.0.5",
+    "@angular/animations": "11.0.6",
+    "@angular/common": "11.0.6",
+    "@angular/compiler": "11.0.6",
+    "@angular/core": "11.0.6",
+    "@angular/forms": "11.0.6",
+    "@angular/language-service": "11.0.6",
+    "@angular/platform-browser": "11.0.6",
+    "@angular/platform-browser-dynamic": "11.0.6",
+    "@angular/router": "11.0.6",
     "ng-lazyload-image": "9.1.0",
     "rxjs": "6.6.3",
-    "tslib": "2.0.3",
+    "tslib": "2.1.0",
     "zone.js": "0.11.3"
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
     "@angular-devkit/build-angular": "0.1100.5",
-    "@angular-eslint/builder": "0.8.0-beta.7",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.7",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.7",
-    "@angular-eslint/schematics": "0.8.0-beta.7",
-    "@angular-eslint/template-parser": "0.8.0-beta.7",
+    "@angular-eslint/builder": "1.0.0",
+    "@angular-eslint/eslint-plugin": "1.0.0",
+    "@angular-eslint/eslint-plugin-template": "1.0.0",
+    "@angular-eslint/schematics": "1.0.0",
+    "@angular-eslint/template-parser": "1.0.0",
     "@angular/cli": "11.0.5",
-    "@angular/compiler-cli": "11.0.5",
+    "@angular/compiler-cli": "11.0.6",
     "@ngui/common": "0.7.0",
-    "@types/googlemaps": "3.43.0",
+    "@types/googlemaps": "3.43.1",
     "@types/jquery": "3.5.5",
-    "@types/node": "14.14.14",
-    "@typescript-eslint/eslint-plugin": "4.11.0",
-    "@typescript-eslint/parser": "4.11.0",
+    "@types/node": "14.14.20",
+    "@typescript-eslint/eslint-plugin": "4.12.0",
+    "@typescript-eslint/parser": "4.12.0",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "6.0.1",
     "command-line-args": "5.1.1",
     "convict": "6.0.0",
     "dateformat": "4.4.1",
-    "eslint": "7.16.0",
+    "eslint": "7.17.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.9",
+    "eslint-plugin-jsdoc": "30.7.13",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "glob": "7.1.6",
     "html-minifier": "4.0.0",
@@ -97,12 +97,12 @@
     "lodash": "4.17.20",
     "ncp": "2.0.0",
     "npm-run-all": "4.1.5",
-    "npmversion": "1.0.1",
+    "npmversion": "1.7.0",
     "rimraf": "3.0.2",
-    "sass": "1.30.0",
+    "sass": "1.32.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
     "typescript": "4.0.5",
-    "uglify-js": "3.12.3"
+    "uglify-js": "3.12.4"
   }
 }
