--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "debug": "4.3.1",
     "express": "4.17.1",
     "express-cache-headers": "0.1.4",
-    "express-user-agent-blocker": "2.0.3",
+    "express-user-agent-blocker": "2.0.4",
     "forever-monitor": "3.0.3",
-    "helmet": "4.3.1",
+    "helmet": "4.4.0",
     "helmet-csp": "3.3.1",
     "hpkp": "2.0.1",
     "hsts": "2.2.0",
@@ -47,7 +47,7 @@
     "standard": "16.0.3"
   },
   "scripts": {
-    "ncu:update": "ncu -u && npm update && npm update -D && npm install",
+    "ncu:update": "ncu -u && npm install",
     "start": "standard && node server/start.js"
   }
 }
