--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouq77-portfolio",
-  "version": "10.3.5",
+  "version": "10.3.6",
   "author": "Louw Swart",
   "description": "On-line portfolio of Louw Swart",
   "license": "MIT",
@@ -44,20 +44,21 @@
     "heroku:clean:markers": "rimraf heroku/app/assets/markers",
     "heroku:clean:resources": "rimraf heroku/app/assets/resources",
     "heroku:clean:files": "rimraf heroku/app/*.html heroku/app/*.js heroku/app/*.css heroku/app/*.ico heroku/app/*.json heroku/app/*.txt heroku/app/*.xml",
-    "ncu:update": "ncu -u && npm update && npm update -D && npm install",
+    "install:legacy": "npm install --legacy-peer-deps",
+    "ncu:update": "ncu -u && npm run install:legacy",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && npm prune"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.3",
-    "@angular/common": "11.2.3",
-    "@angular/compiler": "11.2.3",
-    "@angular/core": "11.2.3",
-    "@angular/forms": "11.2.3",
-    "@angular/language-service": "11.2.3",
-    "@angular/platform-browser": "11.2.3",
-    "@angular/platform-browser-dynamic": "11.2.3",
-    "@angular/router": "11.2.3",
+    "@angular/animations": "11.2.4",
+    "@angular/common": "11.2.4",
+    "@angular/compiler": "11.2.4",
+    "@angular/core": "11.2.4",
+    "@angular/forms": "11.2.4",
+    "@angular/language-service": "11.2.4",
+    "@angular/platform-browser": "11.2.4",
+    "@angular/platform-browser-dynamic": "11.2.4",
+    "@angular/router": "11.2.4",
     "ng-lazyload-image": "9.1.0",
     "rxjs": "6.6.6",
     "tslib": "2.1.0",
@@ -65,20 +66,20 @@
   },
   "devDependencies": {
     "@agm/core": "1.1.0",
-    "@angular-devkit/build-angular": "0.1102.2",
+    "@angular-devkit/build-angular": "0.1102.3",
     "@angular-eslint/builder": "1.2.0",
     "@angular-eslint/eslint-plugin": "1.2.0",
     "@angular-eslint/eslint-plugin-template": "1.2.0",
     "@angular-eslint/schematics": "1.2.0",
     "@angular-eslint/template-parser": "1.2.0",
-    "@angular/cli": "11.2.2",
-    "@angular/compiler-cli": "11.2.3",
+    "@angular/cli": "11.2.3",
+    "@angular/compiler-cli": "11.2.4",
     "@ngui/common": "0.8.0",
     "@types/googlemaps": "3.43.3",
     "@types/jquery": "3.5.5",
     "@types/node": "14.14.31",
-    "@typescript-eslint/eslint-plugin": "4.15.2",
-    "@typescript-eslint/parser": "4.15.2",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "bootstrap-sass": "3.4.1",
     "classlist.js": "1.1.20150312",
     "codelyzer": "6.0.1",
@@ -92,7 +93,7 @@
     "glob": "7.1.6",
     "html-minifier": "4.0.0",
     "intersection-observer": "0.12.0",
-    "jquery": "3.5.1",
+    "jquery": "3.6.0",
     "jsonfile": "6.1.0",
     "lodash": "4.17.21",
     "ncp": "2.0.0",
@@ -101,8 +102,7 @@
     "rimraf": "3.0.2",
     "sass": "1.32.8",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3",
     "typescript": "4.1.5",
-    "uglify-js": "3.12.8"
+    "uglify-js": "3.13.0"
   }
 }
